# otus_cpp_basic

./: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp  max_class.cpp  max_class.h  max_value_class.cpp  max_value_class.h  mean_class.cpp  mean_class.h  mean_value_class.cpp  mean_value_class.h  min_class.cpp  min_class.h  min_value_class.cpp  min_value_class.h  number.hpp  parser.cpp  statistics_class.h  std_class.cpp  std_class.h  std_value_class.cpp  std_value_class.h  todo_move_me_out.cpp
